# VNLC

./: .gitignore  nuxt.config.ts  package.json  publish-to-auto-release.yml
.github/workflows/: publish-to-auto-release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
